Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12605

Code completion does not work for base class if it is a default argument for class template

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 3.2.0-beta1
    • Qt Creator 3.1.2, Qt Creator 3.2.0-beta1, Qt Creator 3.3.0-beta1
    • C/C++/Obj-C++ Support
    • None
    • 4aa4e64b77bf867fb80ed26e21112e15c734a130

      struct Foo
      {
          int bar;
      };
      
      template <typename T1 = Foo>
      struct Derived : T1
      {
      
      };
      
      int main()
      {
          Derived<> foo;
          foo. // members from Foo are not proposed
          return 0;
      }

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kosjar Nikolai Kosjar
            pgorszkowski Przemyslaw Gorszkowski
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes